Revert "06_04(3Dモデル)完了"
This reverts commit 3fc54f53bb17be74147802c71198d7c13ffc6291.

--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -150,11 +150,11 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\AL4\DirectXGame\Object3d.cpp" />
     <ClCompile Include="DirectXCommon.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
-    <ClCompile Include="Object3d.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteCommon.cpp" />
     <ClCompile Include="WinApp.cpp" />
@@ -204,10 +204,10 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\AL4\DirectXGame\Object3d.h" />
     <ClInclude Include="DirectXCommon.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Model.h" />
-    <ClInclude Include="Object3d.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteCommon.h" />
     <ClInclude Include="WinApp.h" />
