--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -160,9 +160,11 @@
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="MyGame.cpp" />
     <ClCompile Include="Object3d.cpp" />
+    <ClCompile Include="Quaternion.cpp" />
     <ClCompile Include="SNFramework.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteCommon.cpp" />
+    <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="WinApp.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -220,9 +222,11 @@
     <ClInclude Include="Model.h" />
     <ClInclude Include="MyGame.h" />
     <ClInclude Include="Object3d.h" />
+    <ClInclude Include="Quaternion.h" />
     <ClInclude Include="SNFramework.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteCommon.h" />
+    <ClInclude Include="Vector3.h" />
     <ClInclude Include="WinApp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
