--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="DirectXCommon.cpp" />
+    <ClCompile Include="GamePlayScene.cpp" />
     <ClCompile Include="ImGuiManager.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
@@ -218,6 +219,7 @@
   <ItemGroup>
     <ClInclude Include="Audio.h" />
     <ClInclude Include="DirectXCommon.h" />
+    <ClInclude Include="GamePlayScene.h" />
     <ClInclude Include="ImGuiManager.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Matrix4.h" />
